--- a/lesson7_7_наследование/index.html
+++ b/lesson7_7_наследование/index.html
@@ -8,10 +8,8 @@
 </head>
 <body>
   <h1>EcmaScript6</h1>
+  <div class="wrapper"></div>
 
-  <ul> 
-      
-  </ul>
 
   <script src="index.js"></script>
 </body>
